--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "dompurify": "^3.1.5",
