--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.5",
+    "@yaireo/tagify": "^3.19.3",
     "axios": "^1.7.2",
     "dompurify": "^3.1.5",
     "jwt-decode": "^4.0.0",
@@ -25,6 +26,8 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
+    "react-tabs": "^6.0.2",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
