--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
     "react-tabs": "^6.0.2",
+    "react-use-websocket": "^4.8.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
