--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@yaireo/tagify": "^3.19.3",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "dompurify": "^3.1.5",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
