--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.5",
     "@yaireo/tagify": "^3.19.3",
+    "@zegocloud/zego-uikit-prebuilt": "^2.6.2",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "dompurify": "^3.1.5",
